# neuromode

./: .pre-commit-config.yaml  Dockerfile  GUIDE_ANALYSE.md  LICENSE  Makefile  README.md  analyze_results.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
configs/: default.json  s2.json  s2_balanced.json  s3.json  s4.json  s5.json  s6.json
docs/: index.md
outputs/run_20250816_170244/: config_effective.json
outputs/run_20250816_170423/: final_weights_ee.npy  network_stats.json  rates_i.csv  weight_trajectories.csv
outputs/run_20250816_170654/: network_stats.json
outputs/run_20250816_170752/: final_weights_ee.npy  rates_e.csv  rates_i.csv  spikes_e.csv  spikes_i.csv  weight_trajectories.csv
outputs/run_20250816_171848/: config_effective.json  final_weights_ee.npy  network_stats.json  rates_e.csv  rates_i.csv  spikes_e.csv  spikes_i.csv  weight_trajectories.csv
outputs/run_20250816_182101/: adjacency_t0.npy  adjacency_t1000.npy
outputs/run_20250816_182228/: adjacency_t0.npy
outputs/run_20250816_183251/: adjacency_t0.npy
outputs/run_20250816_183418/: adjacency_t0.npy  structural_events.csv
outputs/run_20250816_183545/: adjacency_t0.npy  structural_events.csv
outputs/test_s2/: activity_trajectories.npy  adjacency_t0.npy  adjacency_t1000.npy  alive_trajectories.npy  config_effective.json  spikes_e.csv  structural_events.csv  weight_trajectories.npy
outputs/test_s3/: activity_trajectories.npy  adjacency_t1000.npy  adjacency_t2000.npy  adjacency_t3000.npy  alive_trajectories.npy  config_effective.json  degree_histogram.csv  density_evolution.csv  energy.csv  energy_detailed.csv  final_activity_ee.npy  gamma.csv  network_stats.json  rates_e.csv  rates_i.csv  spikes_e.csv  spikes_i.csv  structural_events.csv  weight_trajectories.npy
scripts/: run_end_to_end.sh
src/: __init__.py  model_s1.py  model_s2.py  model_s3.py  model_s4.py  run_s1.py  run_s2.py  run_s3.py  run_s4.py  run_s5.py  run_s6.py
src/connectivity/: __init__.py  var_pdc.py
src/experiments/: __init__.py  ablation_s6.py
src/metrics/: __init__.py  behavior.py  energy.py  structure.py
src/plasticity/: __init__.py  structural.py
src/report/: __init__.py  report_s6.py
src/signals/: __init__.py  lfp.py
src/stats/: __init__.py  stats.py
src/utils/: __init__.py  energy.py  gating.py  io.py  offloading.py
test1/s2_results/: adjacency_t2000.npy  adjacency_t3000.npy  density_evolution.csv  final_activity_ee.npy  network_stats.json  rates_e.csv  rates_i.csv  spikes_i.csv
test1/s4_results/: activity_trajectories.npy  adjacency_t1000.npy  adjacency_t2000.npy  adjacency_t3000.npy  alive_trajectories.npy  config_effective.json  density_evolution.csv  effort.csv  energy.csv  energy_detailed.csv  final_activity_ee.npy  final_alive_ee.npy  final_len_costs_ee.npy  final_weights_ee.npy  gamma.csv  gne.csv  network_stats.json  odi.json  rates_e.csv  rates_i.csv  spikes_e.csv  spikes_i.csv  weight_trajectories.npy
test1/s6_ablation/: grid_config.json  grid_results.csv  grid_results.parquet  report_s6.html
test1/s6_ablation/tables/: odi_by_condition.csv  odi_by_condition.tex  summary_by_omega.csv
tests/: test_s1.py  test_s2.py  test_s5.py  test_s6.py
