[metadata]
name = neuro_offload_model
version = attr: src.__version__
description = Modèles neuronaux de développement et offloading cognitif
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-org/neuro_offload_model
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.10
install_requires =
    brian2>=2.6.0
    numpy>=1.21.0
    pandas>=1.3.0
    matplotlib>=3.5.0
    networkx>=2.6.0
    scipy>=1.7.0

[options.packages.find]
where = .
include = src*

[options.extras_require]
viz = plotly>=5.0.0; nilearn>=0.9.0
tvb = tvb-library>=2.4.0
render = brainrender>=2.0.0
dev = pytest>=7.0.0; pytest-cov>=4.0.0; flake8>=6.0.0; black>=23.0.0; isort>=5.12.0; pre-commit>=3.0.0; mkdocs>=1.5.0; mkdocs-material>=9.0.0

# Configuration flake8
[flake8]
max-line-length = 88
extend-ignore = 
    E203,  # whitespace before ':'
    W503,  # line break before binary operator
    E501,  # line too long (handled by black)
    F401,  # imported but unused (parfois nécessaire pour Brian2)
exclude = 
    .git,
    __pycache__,
    .tox,
    .eggs,
    *.egg,
    build,
    dist,
    .venv
per-file-ignores =
    __init__.py:F401
    tests/*:D100,D101,D102,D103

# Configuration pytest (legacy support)
[tool:pytest]
addopts = 
    -ra
    -q
    --strict-markers
    --disable-warnings
    --cov=src
    --cov-report=term-missing
    --cov-report=html
testpaths = tests
markers =
    slow: marks tests as slow
    integration: marks tests as integration tests
    smoke: marks tests as smoke tests
filterwarnings =
    ignore::UserWarning
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

# Configuration mypy (legacy)
[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
ignore_missing_imports = True
files = src/

[mypy-brian2.*]
ignore_missing_imports = True

[mypy-networkx.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True 